fixed spacing

--- a/kirei/kirei.css
+++ b/kirei/kirei.css
@@ -214,5 +214,5 @@ footer {
   font-weight: 900;
 }
 .resume-container {
-  padding: 0px 40px;
+  padding: 0px 100px;
 }
